Fixing Img from being too low

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,6 @@ ul {
 }
 
 .imgBox {
-    margin: 25%;
+    margin: 0%, 25%;
     align-self: auto;
 }
